mobile layout bugfixes

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -14,10 +14,13 @@
     /*padding-left: 25px; */
     /*padding-left: 22px;*/
     padding-right: 5px;
+    padding-left: 1%;
 }
 
 #right_column {
-    padding-right: 17px;
+    /*padding-right: 17px;*/
+    padding-right: 1%;
+    padding-left: 1%;
 }
 
 #left_column > .launcher {
